Correctly position pointer on mobile

--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,7 @@
+section {
+  display: contents;
+}
+
 .subgrid {
   grid-column: screen; 
   display: grid; 
@@ -33,21 +37,16 @@ d-figure > figure {
 }
 
 .pointer {
-  position: absolute;
-  width: 26px;
-  height: 26px;
-  top: 26px;
-  left: -48px;
-  /* top: -48px;
-  left: 26px; */
+  grid-column: kicker;
+  justify-self: start;
+  margin-bottom: 1em;
 }
 
-/* @media (min-width: 768px) {
+@media (min-width: 1000px) {
   .pointer {
-    top: 26px;
-    left: -48px;
+    justify-self: end;
   }
-} */
+}
 
 /* Workaround for katex incorrectly computing bounding boxes. 
    Unsets contain: content and downgrades to style-onyl containment.
